[package]
name = "tree-sitter-yaml"
description = "YAML"
version = "0.5.0"
authors = []
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "yaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/meysius/tree-sitter-yaml"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
